agregue contenido a contactos

--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-        <section class="fondo-info">
+        <section class="fondo-info p-3 mb-2 bg-white text-dark">
 
             <h2 class="titulo-index">PRESS PLAY</h2>
             <br>
-            <div class="info-index"> Dentro de este sitio vas encontrar las mejores series, películas y documentales
+            <p class="fs-5 text-center fst-italic "> Dentro de este sitio vas encontrar las mejores series, películas y documentales
                 de las plataformas más importantes de streaming como Netflix, Hbo Max y Prime Videos,
                 como también te contaremos cuales son las últimas tendencias de cada una para que no te pierdas de nada.
-            </div>
+            </p>
         </section>
 
     </main>
