--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -49,6 +49,67 @@
         </nav>
     </header>
     <main class="main">
+        <br>
+        <h2 class="titulo-secciones">REGISTRATE</h2>
+        <br>
+        <p class="fs-5 text-center fst-italic "> Registrate en PRESS PLAY y recibi antes que nadie todas las novedades,
+            estrenos y tendecias de las plataformas de streaming mas importantes.
+        </p>
+        <br>
+        <br>
+
+
+        <form class="row g-3 needs-validation" novalidate>
+            <div class="col-md-4">
+                <label for="validationCustom01" class="form-label">Nombre y Apellido</label>
+                <input type="text" class="form-control" id="validationCustom01" value="..." required>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+            
+            <div class="col-md-4 ">
+                <label for="validationCustomUsername" class="form-label">Correo / e-mail</label>
+                <div class="input-group has-validation">
+                    <span class="input-group-text" id="inputGroupPrepend">@</span>
+                    <input type="text" class="form-control" id="validationCustomUsername"
+                        aria-describedby="inputGroupPrepend" required>
+                    <div class="invalid-feedback">
+                        Please choose a username.
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <label for="validationCustom03" class="form-label">Pais / cuidad</label>
+                <input type="text" class="form-control" id="validationCustom03" required>
+                <div class="invalid-feedback">
+                    Please provide a valid city.
+                </div>
+            </div>
+
+            </div>
+            <div class="col-md-3">
+                <label for="validationCustom05" class="form-label">Edad</label>
+                <input type="text" class="form-control" id="validationCustom05" required>
+                <div class="invalid-feedback">
+                    Please provide a valid zip.
+                </div>
+            </div>
+            <div class="col-12">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                    <label class="form-check-label" for="invalidCheck">
+                        Acepto terminos y condiciones
+                    </label>
+                    <div class="invalid-feedback">
+                        You must agree before submitting.
+                    </div>
+                </div>
+            </div>
+            <div class="col-12">
+                <button class="btn btn-primary" type="submit">Enviar datos</button>
+            </div>
+        </form>
 
 
     </main>
